--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="#" />
+    <script src="main.js" defer></script>
+    <title>Login</title>
+  </head>
+  <body>
+    <section id="page">
+      <center><h2 id="login__header">Login</h2></center>
+      <form id="login">
+        <a href="#" id="return__btn">
+          <img height="20" src="./icons/return.svg" alt="<">
+        </a>
+        <div id="login__input">
+          <div id="login__input__container">
+            <label for="email__input" id="email__label">Email</label>
+            <input
+              id="email__input"
+              class=""
+              title="Email"
+              type="email"
+              required
+            />
+            <span id="invalid"></span>
+          </div>
+          <div id="login__input__container">
+            <label for="password__input" id="password__label">Password</label>
+            <input
+              title="Email"
+              id="password__input"
+              class=""
+              type="password"
+              required
+            /><br />
+            <span id="input__conditions"
+              >Minimum 6 characters</span
+            >
+          </div>
+        </div>
+        <div id="login__submit">
+          <button id="login__submit__btn">Login</button>
+        </div>
+      </form>
+    </section>
+  </body>
+</html>
