--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               type="email"
               required
             />
-            <span id="invalid"></span>
+            <!-- <span id="invalid"></span> -->
           </div>
           <div id="login__input__container">
             <label for="password__input" id="password__label">Password</label>
@@ -36,7 +36,7 @@
               class=""
               type="password"
               required
-            /><br />
+            />
             <span id="input__conditions"
               >Minimum 6 characters</span
             >
