fixing key press in mobile

--- a/index.html
+++ b/index.html
@@ -14,18 +14,12 @@
       <center><h2 id="login__header">Login</h2></center>
       <form id="login">
         <a href="#" id="return__btn">
-          <img height="20" src="./icons/return.svg" alt="<">
+          <img height="20" src="./icons/return.svg" alt="<" />
         </a>
         <div id="login__input">
           <div id="login__input__container">
             <label for="email__input" id="email__label">Email</label>
-            <input
-              id="email__input"
-              class=""
-              title="Email"
-              type="email"
-              required
-            />
+            <input id="email__input" class="" title="Email" type="email" />
             <!-- <span id="invalid"></span> -->
           </div>
           <div id="login__input__container">
@@ -35,11 +29,8 @@
               id="password__input"
               class=""
               type="password"
-              required
             />
-            <span id="input__conditions"
-              >Minimum 6 characters</span
-            >
+            <span id="input__conditions">Minimum 6 characters</span>
           </div>
         </div>
         <div id="login__submit">
