--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="page">
       <center><h2 id="login__header">Login</h2></center>
       <form id="login">
-        <a href="#" id="return__btn">
+        <a href="https://tunisianet.netlify.app/" id="return__btn">
           <img height="20" src="./icons/return.svg" alt="<" />
         </a>
         <div id="login__input">
