--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div id="login__input__container">
             <label for="password__input" id="password__label">Password</label>
             <input
-              title="Email"
+              title="Password"
               id="password__input"
               class=""
               type="password"
