--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Login</title>
   </head>
   <body>
+    <div class="bg"></div>
+    <div class="spinner"></div>
     <section id="page">
       <center><h2 id="login__header">Login</h2></center>
       <form id="login" onsubmit="return false">
